# spinner

./: LICENSE  README.md  spinner.cabal
app/: Main.hs
src/System/: Spinner.hs
